--- a/jeu_akiri_qt/mainwindow.ui
+++ b/jeu_akiri_qt/mainwindow.ui
@@ -42,21 +42,15 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetMinimumSize</enum>
      </property>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
-     </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="level_box_2">
        <property name="text">
         <string>Level :</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
-     </item>
      <item row="0" column="0">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="size_label">
        <property name="text">
         <string>Size : </string>
        </property>
@@ -67,6 +61,44 @@
        <property name="text">
         <string>Play</string>
        </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QComboBox" name="size_box">
+       <item>
+        <property name="text">
+         <string>7 * 7</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>10 * 10</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>14 * 14</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="level_box">
+       <item>
+        <property name="text">
+         <string>Easy</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Medium</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Hard</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
