--- a/jeu_akiri_QT/jeu_akiri_qt/mainwindow.ui
+++ b/jeu_akiri_QT/jeu_akiri_qt/mainwindow.ui
@@ -128,7 +128,7 @@
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,8">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,8">
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
@@ -143,6 +143,13 @@
        <widget class="QPushButton" name="doneButton">
         <property name="text">
          <string>Done</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="undoButton">
+        <property name="text">
+         <string>unDo</string>
         </property>
        </widget>
       </item>
@@ -178,7 +185,7 @@
      <x>0</x>
      <y>0</y>
      <width>918</width>
-     <height>26</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
@@ -200,7 +207,7 @@
   <customwidget>
    <class>AkariView</class>
    <extends>QWidget</extends>
-   <header location="global">akariview.h</header>
+   <header>include/AkariView.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
